tests/fail/Step1Scanning.java
abstract
boolean
break
byte
case
catch
char
class
const
continue
default
do
double
else
extends
final
finally
int
float
interface
for
long
goto
native
if
new
implements
package
import
private
instanceof
protected
public
return
short
static
strictfp
super
switch
synchronized
this
throw
throws
transient
try
void
volatile
while

?
=
==
!
~
!=
/
/=
+
+=
++
-
-=
-
*
*=
%
%=
>>
>>=
>>>
>>>=
>=
>
<<
<<=
<=
<
^
^=
|
|=
||
&
&=
&&

,
.
{
}
(
)
[
]
;
:
